# code_samples

./: README.md
neural_networks/: nndl_2020__homework_1.ipynb
rag_assessment/: README.md
rag_assessment/data_processing/: vector_database.py
rag_assessment/data_processing/llama_db/: chroma.sqlite3
rag_assessment/evaluation/: correctness.py  eval_rag_truthfulqa.txt  evaluator.py  faithfulness.py
rag_assessment/evaluation/graham_db/: chroma.sqlite3
rag_assessment/evaluation/llama_db/: chroma.sqlite3
rag_assessment/llama_custom/: query_engine.py  rag_application.py  response_synthesizer.py  retriever.py
rag_assessment/web_IF/: index_server.py  query_index.py
robot_learning/: README.md
robot_learning/src/ASR_and_transformers/: CMakeLists.txt  classify.py  classify_client.py  context_client.py  context_net.py  dataset.py  listen.py  main.py  my_utils.py  package.xml
robot_learning/src/ASR_and_transformers/data/: classifier_dataset.csv  classifier_dataset_big.csv  classifier_dataset_pos.csv  classifier_dataset_small.csv  context_dataset_200_shuffled.csv  context_dataset_400_shuffled.csv  inf_data_big.csv  inf_data_new.csv  negative_examples.txt  positive_examples.txt
robot_learning/src/ASR_and_transformers/models/: context_net.torch  lr_clf_2a_dataset.sav
robot_learning/src/ASR_and_transformers/msg/: Tokens.msg  YOLO.msg
robot_learning/src/ASR_and_transformers/srv/: Classify.srv  Context.srv
sfm_autoencoder/: README.md
sfm_autoencoder/default/: autoencoder.py  dataset.py  dec_parameters.torch  enc_parameters.torch  main.py  surf_detector.py
(+4 files in other folders)
